--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,5 +1,5 @@
 # some information about you
-name: "Shaily Roy"
+name: "Shaily Roy!!!"
 nickname: "Shaily"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Greetings, I am"
