--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -11,28 +11,58 @@ section:
 # Your Skills.
 # Give a summary of you each skill in the summary section.
 skills:
+- name: Matlab
+  logo: /images/sections/skills/matlab.svg
+  summary: "Capable of using MATLAB as general computation tool."
+  url: "https://www.mathworks.com/products/matlab.html"
 
 - name: Python
   logo: /images/sections/skills/python.png
-  summary: "Using as the main language for teaching and thesis. Made some tutorials for python basics."
+  summary: "Using as the main language for making post processing tools. Capable of writing scalable, maintainable, and efficient program."
+  url: "https://python.org/"
 
-- name: C++
-  logo: /images/sections/skills/c++.png
-  summary: "Know basic C programming. Used for problem solving. Teaching C++ programming language as a course. Made some tutorials"
-  
-- name: Java
-  logo: /images/sections/skills/java.png
-  summary: "Capable of writing and applying Java codes for problem solving and projects, prepared some tutorial on Object Oriented Programming"
+- name: C
+  logo: /images/sections/skills/c.svg
+  summary: "Know basic C programming. Used for problem solving. Teaching C programming language as a course in Sonargaon University (SU)."
 
-- name: Latex
-  logo: /images/sections/skills/latex.png
-  summary: "Prepared Latex CV and Thesis Conference paper."
+- name: ANSYS Fluent
+  logo: /images/sections/skills/fluent2.png
+  summary: "Capable using ANSYS Fluent as FEM Modeling Tool."
+  url: "https://www.ansys.com/products/fluids/ansys-fluent"
 
-- name: HTML CSS SQL PHP
-  logo: /images/sections/skills/htmlcss.png
-  summary: "Worked on some projects that requires html, css , sql and php."
-  
-- name: Matlab
-  logo: /images/sections/skills/matlab.svg
-  summary: "Have basic idea."
- 
+- name: Scheme
+  logo: /images/sections/skills/scheme.svg
+  summary: "Capable of writing and applying Scheme codes to automate pre-processing in ANSYS Fluent."
+  url: "https://en.wikipedia.org/wiki/Scheme_(programming_language)"
+
+- name: AutoCAD
+  logo: /images/sections/skills/autocad.png
+  summary: "Know basic fuctionatilies of autoCAD. Can design layouts."
+
+- name: Solidworks
+  logo: /images/sections/skills/solidworks.png
+  summary: "Can design complex 3D models."
+
+- name: Tecplot 360ex
+  logo: /images/sections/skills/tecplot.png
+  summary: "Using Tecplot 360ex as primary post-processing tool."
+  url: "https://www.tecplot.com"
+
+- name: Inkscape
+  logo: /images/sections/skills/inkscape.png
+  summary: "Also experienced with Inkscape."
+  url: "https://inkscape.org"
+
+- name: Linux
+  logo: /images/sections/skills/linux.png
+  summary: "Using Ubuntu as secondary operating system. Capable of writing bash/shell scripts."
+
+- name: Git
+  logo: /images/sections/skills/git.png
+  summary: "Experienced with git-based development. Mostly, use Github."
+  url: "https://git-scm.com/"
+
+- name: Go Language
+  logo: /images/sections/skills/go.png
+  summary: "Familiar with Go. Developed this website using a self modified HUGO theme."
+  url: "https://golang.org"
