--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -30,3 +30,22 @@ skills:
   logo: /images/sections/skills/linux.png
   summary: "Using Ubuntu as secondary operating system. Capable of writing bash/shell scripts."
 
+- name: C++
+  logo: /images/sections/skills/c++.png
+  summary: "Know basic C programming. Used for problem solving. Teaching C++ programming language as a course. Made some tutorials"
+  
+- name: Java
+  logo: /images/sections/skills/java.png
+  summary: "Capable of writing and applying Java codes for problem solving and projects, prepared some tutorial on Object Oriented Programming"
+
+- name: Latex
+  logo: /images/sections/skills/latex.png
+  summary: "Prepared Latex CV and Thesis Conference paper."
+
+- name: HTML CSS SQL PHP
+  logo: /images/sections/skills/htmlcss.png
+  summary: "Worked on some projects that requires html, css , sql and php."
+  
+- name: Matlab
+  logo: /images/sections/skills/matlab.svg
+  summary: "Have basic idea."
