--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -42,7 +42,7 @@ skills:
   logo: /images/sections/skills/latex.png
   summary: "Prepared Latex CV and Thesis Conference paper."
 
-- name: "HTML CSS SQL PHP"
+- name: HTML
   logo: /images/sections/skills/htmlcss.png
   summary: "Worked on some projects that requires html, css , sql and php."
   
