--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -14,22 +14,24 @@ skills:
 
 - name: Python
   logo: /images/sections/skills/python.png
-  summary: "Using as the main language for making post processing tools. Capable of writing scalable, maintainable, and efficient program."
-  url: "https://python.org/"
-
-- name: C
-  logo: /images/sections/skills/c.svg
-  summary: "Know basic C programming. Used for problem solving. Teaching C programming language as a course in Sonargaon University (SU)."
-
-- name: Inkscape
-  logo: /images/sections/skills/inkscape.png
-  summary: "Also experienced with Inkscape."
-  url: "https://inkscape.org"
-
-- name: Linux
-  logo: /images/sections/skills/linux.png
-  summary: "Using Ubuntu as secondary operating system. Capable of writing bash/shell scripts."
+  summary: "Using as the main language for teaching and thesis. Made some tutorials for python basics."
 
 - name: C++
-  logo: /images/sections/skills/cpp.png
+  logo: /images/sections/skills/c++.png
   summary: "Know basic C programming. Used for problem solving. Teaching C++ programming language as a course. Made some tutorials"
+  
+- name: Java
+  logo: /images/sections/skills/Java.png
+  summary: "Capable of writing and applying Java codes for problem solving and projects, prepared some tutorial on Object Oriented Programming"
+
+- name: Latex
+  logo: /images/sections/skills/latex.png
+  summary: "Prepared Latex CV and Thesis Conference paper."
+
+- name: HTML CSS SQL PHP
+  logo: /images/sections/skills/htmlcss.png
+  summary: "Worked on some projects that requires html, css , sql and php."
+  
+- name: Matlab
+  logo: /images/sections/skills/matlab.svg
+  summary: "Have basic idea."
