--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -69,25 +69,20 @@ socialLinks:
 # You can show your verifiable certificates from https://www.credly.com.
 # You can also show a circular bar indicating the level of expertise on a certain skill
 badges:
-#- type: certification
-#  name: Certified Kubernetes Security Specialist
-#  url: "https://www.credly.com/org/the-linux-foundation/badge/exam-developer-certified-kubernetes-security-specialist"
-#  badge: "https://images.credly.com/size/680x680/images/f4bf92ed-8985-40b2-bc07-2f9308780854/kubernetes-security-specialist-logo-examdev.png"
+- type: soft-skill-indicator
+  name: Honesty
+  percentage: 100
+  color: green
 
-#- type: certification
-#  name: Istio and IBM Cloud Kubernetes Service
-#  url: "https://www.credly.com/org/the-linux-foundation/badge/exam-developer-certified-kubernetes-security-specialist"
-#  badge: "https://images.credly.com/size/680x680/images/8d34d489-84bf-4861-a4a0-9e9d68318c5c/Beyond_basics_of_Istio_on_Cloud_v2.png"
+- type: soft-skill-indicator
+  name: Determination
+  percentage: 95
+  color: orange
 
-#- type: certification
-#  name: Artificial Intelligence and Machine Learning
-#  url: "https://www.credly.com/org/grupo-bancolombia/badge/artificial-intelligence-and-machine-learning"
-#  badge: "https://images.credly.com/size/680x680/images/e027514f-9d07-4b29-862f-fe21a8aaebf1/ae.png"
-
-#- type: certification
-#  name: Amateur Radio Operator
-#  url: "http://www.btrc.gov.bd/amateur-radio"
-#  badge: "files/HamRadio.png"
+- type: soft-skill-indicator
+  name: Critical Thinking Ability
+  percentage: 90
+  color: yellow
 
 - type: certification
   name: Me
