--- a/data/en/sections/accomplishments.yaml
+++ b/data/en/sections/accomplishments.yaml
@@ -1,8 +1,8 @@
 # section information
 section:
-  name: Accomplishments
+  name: Involvements
   id: accomplishments
-  enable: false
+  enable: true
   weight: 9
   showOnNavbar: false
   # Can optionally hide the title in sections
@@ -11,36 +11,51 @@ section:
 
 # Your accomplishments
 accomplishments:
-- name: Linux Foundation System Administrator
-  timeline: "March 2018 - March 2019"
+- name: Brac University Computer Club Co-advisor
+  timeline: "December 2018 - Present"
   organization:
-    name: Linux Foundation
-    url: https://www.linuxfoundation.org
-  courseOverview: This course helps to understand the key concepts such as networking, storage, security, maintenance, logging and monitoring, application lifecycle, troubleshooting, API object primitives etc. It also help to grow the ability to establish basic use-cases for end users.
-  certificateURL: "https://example.com"
+    name: Brac University Computer Club
+    url: https://bracucc.org/teacher/shaily-roy/
+  courseOverview: 'BRAC University Computer Club (BUCC) is the oldest club of BRAC university. This club consists of a youthful team of passionate and hardworking Tech Enthusiast students.'
+  certificateURL: "https://bracucc.org/teacher/shaily-roy/"
 
-- name: Machine Learning
-  timeline: "Jun 2020 - Jan 2021"
+- name: Thesis Co-supervisor
+  timeline: "Jun 2020 - present"
   organization:
-    name: Coursera
-    url: https://www.coursera.org
-  courseOverview: "This course provides a broad introduction to machine learning, datamining, and statistical pattern recognition. Topics include: (i) Supervised learning (parametric/non-parametric algorithms, support vector machines, kernels, neural networks). (ii) Unsupervised learning (clustering, dimensionality reduction, recommender systems, deep learning). (iii) Best practices in machine learning (bias/variance theory; innovation process in machine learning and AI)."
-  certificateURL: "https://example.com"
+    name: Brac University
+    url: 'www.bracu.ac.bd'
+  courseOverview: "Currently co-supervising more than 4 research groups of different topic from Data Science"
+  certificateURL: ""
 
-- name: Grokking the System Design Interview
-  timeline: "Jan 2018 - Sept 2018"
+- name: Course Co-ordinator
+  timeline: "Jun 2020 - present"
   organization:
-    name: educative
-    url: https://www.educative.io
-  courseOverview: This course is a complete guide to master the SDIs. It is created by hiring managers who’ve been working at Google, Facebook, Microsoft, and Amazon. We've carefully chosen a set of questions that have not only been repeatedly asked at top companies, but also provide a thorough experience to handle any system design problem.
-  certificateURL: "https://example.com"
+    name: Brac University
+    url: 'https://bux.bracu.ac.bd/courses/course-v1:buX+CSE221+2021_Summer/about'
+  courseOverview: "Performed all the responsibilities of Course-Co-ordinator of Algorithms and Programming Languages Courses"
+  certificateURL: "https://bux.bracu.ac.bd/courses/course-v1:buX+CSE419+2020_Summer/about"
 
-- name: Mastering Multithreading Programming with Go (Golang)
+- name: Content Creator
+  timeline: "Jun 2020 - present"
+  organization:
+    name: Youtube
+    url: 'https://youtube.com/playlist?list=PLNDrhDXd0Qt_kjQ3zPEC1B6GtA9Os2ra9'
+  courseOverview: "Tried to make Programming Related Contents for Students"
+  certificateURL: "https://youtube.com/playlist?list=PLNDrhDXd0Qt_kjQ3zPEC1B6GtA9Os2ra9"
+
+- name: Judge and Instructor
+  timeline: "March 2017 - Present"
+  organization:
+    name: Brac university IEEE student Chapter
+    url: http://ieeebracu.com/ieeextreme-12-0-workshop/
+  courseOverview: Took workshop for online contests and also performed as judge on various competitions arranged by Bracu IEEE Student Chapter
+  certificateURL: "http://ieeebracu.com/ieeextreme-12-0-workshop/"
+
+- name: Mozilla Firefox QA Team
   timeline: "Nov 2017 - Mar 2018"
   organization:
-    name: Udemy
-    url: https://www.udemy.com
-  courseOverview: Discover how to create responsive and high performance software. Develop programs with Golang that are highly Concurrent and Parallel. Improve your programming skills in Go with more advanced, mulithreading topics.
-  certificateURL: "https://example.com"
+    name: Mozilla
+    url: https://quality.mozilla.org/2016/02/firefox-45-beta-3-testday-results/
+  courseOverview: Worked with Bangladesh Mozilla Quality Assurance Team volunteerily
+  certificateURL: "https://quality.mozilla.org/2016/02/firefox-45-beta-3-testday-results/"
  
-
