--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -2,53 +2,64 @@
 section:
   name: Experiences
   id: experiences
-  enable: false
+  enable: true
   weight: 3
-  showOnNavbar: false
+  showOnNavbar: true
   # Can optionally hide the title in sections
   # hideTitle: true 
 
 # Your experiences
 experiences:
 - company:
-    typeOfExperience: Research Experience
-    name: Macro-to-Micro scale Fluids Engineering Lab (MμFEL)
-    url: "https://toufiquehasan.buet.ac.bd/research/lab/home.html"
-    location: Department of Mechanical Engineering, BUET
+    typeOfExperience: Teaching
+    name: CSE, Brac University
+    url: "https://www.bracu.ac.bd"
+    location: Dhaka
     # company overview
-    overview: The research group of “Macro-to-Micro scale Fluids Engineering Lab (MμFEL)” is developed to study in modern bio fluid and gas dynamics related problems. The research group focuses on fundamental and applied phenomena in fluid mechanics using experimental, computational, and analytical approaches both in macro and micro scales.
+    overview: 'BracU follows a liberal arts approach to education which nurtures fresh ideas and gives new impetus to the field of tertiary education. It ensures a high quality of education and aims to meet the demands of contemporary times.'
   positions:
-  - designation: Research Assistant
-    start: November 2020
+  - designation: Lecturer
+    start: May 2018
     # don't provide end date if you are currently working there. It will be replaced by "Present"
     # end: Dec 2020
     # give some points about what was your responsibilities at the company.
     responsibilities:
-      show: false   #if true, shows elements of respons as items
+      show: true   #if true, shows elements of respons as items
       respons:
-      - Design and develop XYZ tool for ABC task
-      - Design, develop and manage disaster recovery tool [Xtool](https://www.example.com) that backup Kubernetes volumes, databases, and cluster's resource definition.
-      - Lead backend team.
-
-  - designation: Research Student
-    start: January 2018
-    end: October 2020
-    responsibilities:
-      show: false   #if true, shows elements of respons as items
-      respons:
-      - Implement and test xyz feature for abc tool.
-      - Support client for abc tool.
-      - Learn k,d,w technology for xyz.
+      - Designed and developed a new course
+      - Co-ordinated Multiple courses in online and offline semesters
+      - Created online contents for Students
+      - Arranged workshops, webiners regarding programming and also mental health
+      - Worked as Judge in various clubs' Competitions
+      - Co-advised clubs
+      - Co-supervised Thesis groups
+      - Performed all the adminstritive responsibilities
 
 - company:
-    typeOfExperience: Teaching Experience
-    name: Sonargaon University (SU)
-    url: "http://www.su.edu.bd"
-    location: 147/I, Green Road, Dhaka
-    overview: Sonargaon University (SU) is one of the Bangladesh’s preeminent private universities, approved by University Grants Commission (UGC) of Bangladesh and Bangladesh Government (GoB).
+    typeOfExperience: Teaching
+    name: Software Engineering Department, Daffodil International University
+    url: "https://www.diu.edu.bd"
+    location: Dhaka
+    # company overview
   positions:
-  - designation: Lecturer at Department of Mechanical Engineering
-    start: June 2019
+  - designation: Lecturer
+    start: March 2018
+    end: May 2018
+    responsibilities:
+      show: true   #if true, shows elements of respons as items
+      respons:
+      - Performed all the academic and adminstritive responsibilities
+
+- company:
+    typeOfExperience: Programming
+    name: Appscode ltd
+    url: "https://appscode.com/about/"
+    location: Dhaka
+    overview: "Appscode accelerates the transition to Containers by building a Kubernetes-native Data Platform. The vision of AppsCode is to make the best tools for software development available to anybody at an affordable price. " 
+  positions:
+  - designation: Front End Software Engineer
+    start: February 2018
+    end: March 2018
     responsibilities:
       show: false
       respons:
@@ -57,17 +68,17 @@ experiences:
       - See lots of example videos.
 
 - company:
-    typeOfExperience: Industrial Experience
-    name: The ACME Laboratories Ltd.
-    url: "https://www.acmeglobal.com"
-    location: Dhamrai Plant, Dhaka
-    overview: The ACME Laboratories Ltd. is a leading company for manufacturing world-class and top-quality pharmaceutical products in Bangladesh.
+    typeOfExperience: Volunteering Experience
+    name: The Tech Lab
+    url: ""
+    location: Dhaka
+    overview: The tech lab is a institution where from childern to elderly persons everyone is welcome to learn programming with fun.
   positions:
-  - designation: In Plant Trainee
-    start: October 2018
+  - designation: Instructor
+    start: January 2017
     end: October 2018
     responsibilities:
       show: true
       respons:
-      - Performed inspection of different subsystems and equipment
-      - Reported daily to the Chief of the Engineering Department
+      - worked on some R&D Projects
+      - Helped Students Learning Arduino Programming
