--- a/data/en/sections/research-interests.yaml
+++ b/data/en/sections/research-interests.yaml
@@ -1,14 +1,14 @@
 section:
-  name: Conference Paper
+  name: Research Interests
   id: research-projects
   enable: true
   weight: 5
   showOnNavbar: false
-  hideTitle: true
+  hideTitle: false
 
 researchContents:
 
 - content: 
-  title: Research Interests
+  title: 
   image: "files/research/bot.gif"
   description: 'I am broadly interested in Data Science. In my undergrad , I worked on Time Series Analysis , however currently I am working on some Machine Learning Related Research Problems. In future I will love to work on Machine Learning, Neural Network, Deep Learning, Image Processing and Natural Language Processing'
