--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -7,7 +7,7 @@ image: "images/author/shaily.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "shaily.roy@bracu.ac.bd"
-  phone: 
+  #phone: 
 
 # some summary about what you do
 summary:
