--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -3,7 +3,7 @@ name: "Shaily Roy"
 nickname: "Shaily"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Greetings, I am"
-image: "images/author/shaily.jpg"
+image: "images/author/shaily1.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "shailyroy37@gmail.com"
