--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -22,7 +22,7 @@ Besides, she has experience of working as a software engineer in a USA based com
 After joining Brac University, she has designed and introduced a totally new elective course "CSE419: Programming Languages" in the department of CSE.
 </br>
 She has completed her undergraduate education in Computer Science Engineering, from
-[Brac University](https://www.bracu.ac.bd/) in December, 2018. She is currently doing her Msc there.
+Brac University in December, 2018. She is currently doing her Msc there.
 </br>'
 
 # your resume. this file path should be relative to you "static" directory
