changed footer design

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -80,7 +80,7 @@ badges:
   color: orange
 
 - type: soft-skill-indicator
-  name: Critical Thinking Ability
+  name: Communication
   percentage: 90
   color: yellow
 
