--- a/config.yaml
+++ b/config.yaml
@@ -93,7 +93,7 @@ params:
       enable: true
     # Show/hide credentials section in the footer. Default is "true".
     credentials:
-      enable: true
+      enable: false
 
     # Show/hide newsletter section in the footer. Default is "true".
     # Currently, it supports "mailchimp".
@@ -104,4 +104,7 @@ params:
 
     # Show/hide disclaimer notice in the footer. Default is "false".
     disclaimer:
+      enable: false
+    
+    copywrite:
       enable: false
