--- a/data/en/sections/research-projects.yaml
+++ b/data/en/sections/research-projects.yaml
@@ -1,7 +1,7 @@
 section:
-  name: Publication
+  name: Research
   id: research-projects
-  enable: true
+  enable: false
   weight: 6
   showOnNavbar: false
   hideTitle: false
