--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -7,6 +7,7 @@ image: "images/author/shaily1.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "shaily.roy@bracu.ac.bd"
+  personal email: "shailyroy37@gmail.com"
   #phone: 
 
 # some summary about what you do
