--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -6,7 +6,7 @@ greeting: "Greetings, I am"
 image: "images/author/shaily1.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "shaily.roy@bracu.ac.bd"
+  official email: "shaily.roy@bracu.ac.bd"
   personal email: "shailyroy37@gmail.com"
   #phone: 
 
