--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -41,8 +41,8 @@ degrees:
     achieved: "4 (Thesis Pending)"
     outOf: 4
   takenCourses: #(optional)
-    showCourses: true   #if true, will show this div
-    showGrades: true     # if true, the courses will be rendered as a table otherwise it will render as a list and the grades will be hidden.
+    showCourses: false   #if true, will show this div
+    showGrades: false     # if true, the courses will be rendered as a table otherwise it will render as a list and the grades will be hidden.
     courses:
     - name: Neural Network
       achieved: 4
@@ -63,7 +63,7 @@ degrees:
       achieved: 4
       outOf: 4
   publications: #(optional)
-    showPublications: true   #if true, will show this div
+    showPublications: false   #if true, will show this div
     pubList:
     - title: Prediction Of Covid-19 Severity Level Using XGBoost Algorithm: A Machine Learning Approach Based On SIR Epidemical Model
       url: "https://easychair.org/publications/preprint/rc9f"
