--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -63,13 +63,10 @@ degrees:
       achieved: 4
       outOf: 4
   publications: #(optional)
-    showPublications: false   #if true, will show this div
-    pubList:
     - title: Prediction Of Covid-19 Severity Level Using XGBoost Algorithm: A Machine Learning Approach Based On SIR Epidemical Model
-      url: "https://easychair.org/publications/preprint/rc9f"
-
- 
-
+      url:   "https://easychair.org/publications/preprint/rc9f"
+    - title: Benchmarking and Selecting Optimal Diabetic Retinopathy Detecting Machine Learning Model using Entropy and TOPSIS Method
+      url:   "https://ieeexplore.ieee.org/document/9591153"
       
 - name: B.Sc. in Computer Science and Engineering
   icon: fa-graduation-cap
