--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -63,7 +63,8 @@ degrees:
       achieved: 4
       outOf: 4
   publications: #(optional)
-  showPublications: true   
+    showPublications: true   
+    publist:
     - title: Prediction Of Covid-19 Severity Level Using XGBoost Algorithm: A Machine Learning Approach Based On SIR Epidemical Model
       url:   "https://easychair.org/publications/preprint/rc9f"
     - title: Benchmarking and Selecting Optimal Diabetic Retinopathy Detecting Machine Learning Model using Entropy and TOPSIS Method
