--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -67,7 +67,8 @@ degrees:
     pubList:
     - title: Prediction Of Covid-19 Severity Level Using XGBoost Algorithm: A Machine Learning Approach Based On SIR Epidemical Model
       url: "https://easychair.org/publications/preprint/rc9f"
-
+    - title: Benchmarking and Selecting Optimal Diabetic Retinopathy Detecting Machine Learning Model using Entropy and TOPSIS Method
+      url: "https://ieeexplore.ieee.org/document/9591153"
   #extracurricularActivities: #(optional)
   extracurricular:
     show: true
