--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -65,9 +65,11 @@ degrees:
     publications: #(optional)
   showPublications: true
     pubList:
-    - title: Bitcoin Price Forecasting Using Time Series Analysis
-      url: "https://ieeexplore.ieee.org/document/8631923"
-
+    - title: Benchmarking and Selecting Optimal Diabetic Retinopathy Detecting Machine Learning Model using Entropy and TOPSIS Method
+      url: "https://ieeexplore.ieee.org/document/9591153"
+    - title: Prediction Of Covid-19 Severity Level Using XGBoost Algorithm: A Machine Learning Approach Based On SIR Epidemical Model
+      url: "https://easychair.org/publications/preprint/rc9f"
+ 
   - name: B.Sc. in Computer Science and Engineering
   icon: fa-graduation-cap
   timeframe: 2015 - 2018
