--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -16,7 +16,7 @@ experiences:
     url: "https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering"
     location: 66 Mohakhali, Dhaka 1212, Bangladesh
     # company overview
-    overview: 'BracU follows a liberal arts approach to education which nurtures fresh ideas and gives new impetus to the field of tertiary education. It ensures a high quality of education and aims to meet the demands of contemporary times.'
+    overview: 'I am co-supervising more some research teams on the following topics'
   positions:
   - designation: Co-supervisor
     start:  April 2020
@@ -37,6 +37,7 @@ experiences:
     url: "https://www.bracu.ac.bd/academics/departments/computer-science-and-engineering"
     location: 66 Mohakhali, Dhaka 1212, Bangladesh
     # company overview
+  overview: 'BracU follows a liberal arts approach to education which nurtures fresh ideas and gives new impetus to the field of tertiary education. It ensures a high quality of education and aims to meet the demands of contemporary times.'
   positions:
   - designation: Lecturer
     start: May 2019
