--- a/data/en/sections/research-interests.yaml
+++ b/data/en/sections/research-interests.yaml
@@ -17,4 +17,4 @@ researchContents:
   description4: '* Deep Learning'
   description5: '* Image Processing'
   description6: '* Natural Language Processing'
-                
+  description6: '* Artificial Intelligence'             
