--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -16,13 +16,12 @@ company1:
   url: "https://www.bracu.ac.bd/"
 
 # a summary about you
-summaryCompany1: 'Shaily Roy is working as a lecturer in the Department of Computer Science and Engineering at Brac University from May, 2019. She has completed her undergraduate in Dec, 2018 from the same department with highest Distinction. Previously she was appointed as a lecturer in the Department of Software Engineering in Daffodil International University.
-She performed as a student tutor of CSE and Mathematics in Brac University for more than 2 years. She was also a programming contestant with multiple national recognitions and arranged multiple intra university programming contests as well as programming workshops in Brac University along with other contestants and BUCC during her student life. Before graduation, she was also an instructor in an institution where students were taught hardware implementation of programming.
-Besides, she has experience of working as a software engineer in a USA based company. She is a researcher as well and has successfully presented her work in a well-known international Conference.
-After joining Brac University, she has designed and introduced a totally new elective course "CSE419: Programming Languages" in the department of CSE.
+summaryCompany1: 'Hello I am Shaily Roy, working as a lecturer in the Department of Computer Science and Engineering at Brac University from May, 2019. I have completed my undergraduate in Dec, 2018 from the same department with highest Distinction. Previously I was appointed as a lecturer in the Department of Software Engineering in Daffodil International University.
+I performed as a student tutor of CSE and Mathematics in Brac University for more than 2 years and also was a programming contestant with multiple national recognitions. I have arranged several intra university programming contests as well as programming workshops in Brac University along with other contestants and BUCC during my student life. Before graduation, I used to be an instructor in an institution where students were taught hardware implementation of programming.
+Besides, I have experience of working as a software engineer in a USA based company. I am a researcher as well and have successfully presented my works in well-known international Conferences.
+After joining Brac University, I have designed and introduced a totally new elective course "CSE419: Programming Languages" and also coordinated Algorithm course in the department of CSE.
 </br>
-She has completed her undergraduate education in Computer Science Engineering, from
-Brac University in December, 2018. She is currently doing her Msc there.
+In MSc, I completed my university courses with cgpa 4 and 100% scholarship from the same university for my excellent academic background. Because of my intense keenness towards research, I took 6 courses in data science such as neural network, symbolic machine learning, advanced artificial intelligence, natural language processing, decision support system. I did some projects like benchmarking ML algorithms for detecting diabetic retinopathy, Predicting covid19 severity level using ML and published papers. Currently, I am doing thesis on Machine learning and explainable AI. 
 </br>'
 
 # your resume. this file path should be relative to you "static" directory
