--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -10,7 +10,7 @@ section:
 
 # Your Skills.
 # Give a summary of you each skill in the summary section.
-skills:
+skills: You can check my github (https://github.com/shailyroy) to get the codes. 
 
 - name: Python
   logo: /images/sections/skills/python.png
