--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -10,8 +10,7 @@ section:
 
 # Your Skills.
 # Give a summary of you each skill in the summary section.
-skills: You can check my github (https://github.com/shailyroy) to get the codes. 
-
+skills:
 - name: Python
   logo: /images/sections/skills/python.png
   summary: "Using as the main language for teaching and thesis. Made some tutorials for python basics."
