--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -55,8 +55,8 @@ achievements:
 - title: Participant
   image: /images/sections/achievements/cert.jpg
   summary: 
- - title: Keynote Speaker
+- title: Keynote Speaker
   image: /images/sections/achievements/prog.png
-  summary: https://www.facebook.com/447593662694887/posts/1172411863546393/
+  summary: A session on Importance of programming contests. link: https://www.facebook.com/447593662694887/posts/1172411863546393/
   
   
